# BotForQuiz

./: README.md  config.py  docker-compose.yml  pyproject.toml  questions.json  utils.py
config/: config.py
db/: db.py
functions/: work_wtih_questions.py
questions_answer_functions/: work_wtih_questions.py
tg_bot/: settings.py  tg_bot.py
tg_bot/handlers/: commands.py
tg_bot/keyboards/: reply.py
utils/: utils.py  work_wtih_questions.py
vk_bot/: settings.py  vk_bot.py
vk_bot/handlers/: commands.py
vk_bot/keyboards/: keyboard.py
